# CoRE-MOF

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-test.yml
src/CoRE_MOF/: load.py
src/CoRE_MOF/data/: 2014.csv  2019-FSR.csv
tests/: test_datasets.py  test_properties.py  test_structures_1.py  test_structures_2.py  test_structures_3.py  test_structures_4.py
