[project]
name = "CoRE-MOF"
version = "2019.1"
authors = [
  { name="François-Xavier Coudert", email="fxcoudert@gmail.com" },
]
description = "CoRE MOF database as a Python package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "pandas",
  "pymatgen",
]

[project.urls]
Homepage = "https://github.com/coudertlab/CoRE-MOF"
Issues = "https://github.com/coudertlab/CoRE-MOF/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
